@@ -2,29 +2,19 @@ package org.duollectis.mapart.tools.gui;
 
 import org.duollectis.mapart.tools.converter.CropSettings;
 
-import javax.swing.AbstractAction;
-import javax.swing.JComponent;
-import javax.swing.JPanel;
-import javax.swing.KeyStroke;
-import java.awt.BasicStroke;
-import java.awt.Color;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.Font;
-import java.awt.FontMetrics;
-import java.awt.Graphics;
-import java.awt.Graphics2D;
-import java.awt.Insets;
-import java.awt.RenderingHints;
-import java.awt.event.ActionEvent;
-import java.awt.event.KeyEvent;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.awt.event.MouseWheelListener;
+import javax.swing.*;
+import java.awt.*;
+import java.awt.event.*;
+import java.awt.geom.Area;
+import java.awt.geom.RoundRectangle2D;
 import java.awt.image.BufferedImage;
+import java.awt.image.ConvolveOp;
+import java.awt.image.Kernel;
 import java.util.function.BiConsumer;
 
 public class ImagePreviewPanel extends JPanel {
+
+	static final double MAX_BLUR_RADIUS = 5.0;
 
 	private static final int MIN_SIZE = 300;
 	private static final int TITLE_HEIGHT = 24;
@@ -35,16 +25,23 @@ public class ImagePreviewPanel extends JPanel {
 	private static final double SCALE_MAX = 10.0;
 	private static final int ARROW_STEP = 1;
 	private static final int ARROW_STEP_FAST = 10;
-	private static final Color BG = GuiApp.BG_CARD;
-	private static final Color BORDER_COLOR = GuiApp.BORDER;
-	private static final Color TITLE_COLOR = GuiApp.TEXT_DIM;
-	private static final Color PLACEHOLDER_COLOR = new Color(18, 20, 30);
-	private static final Color PLACEHOLDER_TEXT_COLOR = new Color(60, 68, 90);
-	private static final Color GRID_COLOR = new Color(255, 255, 255);
+	private static final int SNAP_THRESHOLD = 5;
 	private static final String PLACEHOLDER_TEXT = "Перетащите изображение сюда";
+
+	private static Color bg() {return GuiApp.BG_CARD;}
+
+	private static Color borderColor() {return GuiApp.BORDER;}
+
+	private static Color titleColor() {return GuiApp.TEXT_DIM;}
+
+	private static Color placeholderBg() {return GuiApp.BG_DEEP;}
+
+	private static Color placeholderText() {return GuiApp.TEXT_DIM;}
 
 	private final String title;
 	private BufferedImage image;
+	private BufferedImage blurredImage;
+	private double blurRadius;
 	private boolean showGrid;
 	private boolean showGridBackground;
 	private int mapsX = 1;
@@ -52,9 +49,16 @@ public class ImagePreviewPanel extends JPanel {
 	private float gridStrokeWidth = 1f;
 	private Color gridBackgroundColor = Color.BLACK;
 
+	// Последний известный размер сетки — для пересчёта масштаба при ресайзе панели
+	private int lastGridW;
+	private int lastGridH;
+
 	// Режим перетаскивания (только для sourcePreview)
 	private boolean draggable;
+	private boolean snapEnabled = true;
 	private BiConsumer<Integer, Integer> onOffsetChanged;
+
+	private boolean pixelPerfect;
 
 	/**
 	 * Пиксельный масштаб картинки: итоговый размер = image.getWidth() * imgScaleX.
@@ -93,10 +97,21 @@ public class ImagePreviewPanel extends JPanel {
 		setPreferredSize(new Dimension(MIN_SIZE, MIN_SIZE));
 		setupMouseListeners();
 		setupKeyBindings();
+		setupResizeListener();
 	}
 
 	public void setImage(BufferedImage image) {
 		this.image = image;
+		blurredImage = null;
+		int[] grid = computeGridBounds();
+		lastGridW = grid[2];
+		lastGridH = grid[3];
+		repaint();
+	}
+
+	public void setBlurRadius(double radius) {
+		blurRadius = radius;
+		blurredImage = null;
 		repaint();
 	}
 
@@ -107,6 +122,10 @@ public class ImagePreviewPanel extends JPanel {
 
 	public BufferedImage getImage() {
 		return image;
+	}
+
+	public String getTitle() {
+		return title;
 	}
 
 	public void setShowGrid(boolean show) {
@@ -134,10 +153,29 @@ public class ImagePreviewPanel extends JPanel {
 		return gridBackgroundColor;
 	}
 
-	/** Включает отрисовку фона сетки (чёрный прямоугольник под картинкой). */
+	/**
+	 * Включает отрисовку фона сетки (чёрный прямоугольник под картинкой).
+	 */
 	public void setShowGridBackground(boolean show) {
 		showGridBackground = show;
 		repaint();
+	}
+
+	/**
+	 * Включает pixel-perfect режим отображения: масштабирование через NEAREST_NEIGHBOR.
+	 * Устраняет артефакты билинейной интерполяции на дизеренных изображениях.
+	 */
+	public void setPixelPerfect(boolean enabled) {
+		pixelPerfect = enabled;
+		repaint();
+	}
+
+	public void setSnapEnabled(boolean enabled) {
+		snapEnabled = enabled;
+	}
+
+	public boolean isSnapEnabled() {
+		return snapEnabled;
 	}
 
 	/**
@@ -175,6 +213,9 @@ public class ImagePreviewPanel extends JPanel {
 		imgScaleX = Math.min(scaleX, scaleY);
 		imgScaleY = imgScaleX;
 
+		lastGridW = grid[2];
+		lastGridH = grid[3];
+
 		repaint();
 	}
 
@@ -202,6 +243,9 @@ public class ImagePreviewPanel extends JPanel {
 		imgScaleX = Math.max(scaleX, scaleY);
 		imgScaleY = imgScaleX;
 
+		lastGridW = grid[2];
+		lastGridH = grid[3];
+
 		repaint();
 	}
 
@@ -227,6 +271,9 @@ public class ImagePreviewPanel extends JPanel {
 
 		imgScaleX = (double) grid[2] / image.getWidth();
 		imgScaleY = (double) grid[3] / image.getHeight();
+
+		lastGridW = grid[2];
+		lastGridH = grid[3];
 
 		repaint();
 	}
@@ -262,13 +309,15 @@ public class ImagePreviewPanel extends JPanel {
 		imgOffsetX = normOffsetX * dstGrid[2];
 		imgOffsetY = normOffsetY * dstGrid[3];
 
+		lastGridW = dstGrid[2];
+		lastGridH = dstGrid[3];
+
 		repaint();
 	}
 
 	/**
 	 * Конвертирует текущее визуальное состояние панели в {@link CropSettings}
 	 * для передачи в дизер. Пересчитывает экранные координаты в пиксели целевого изображения.
-	 *
 	 * <p>Математика:
 	 * <ul>
 	 *   <li>{@code baseScreenScale = min(gridW/imgW, gridH/imgH)} — базовый fit-масштаб</li>
@@ -306,20 +355,25 @@ public class ImagePreviewPanel extends JPanel {
 		Graphics2D g2 = (Graphics2D) g.create();
 		g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
 		g2.setRenderingHint(RenderingHints.KEY_TEXT_ANTIALIASING, RenderingHints.VALUE_TEXT_ANTIALIAS_ON);
-		g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
+
+		boolean zoomed = imgScaleX >= 1.0 && imgScaleY >= 1.0;
+		if (pixelPerfect && zoomed) {
+			g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_NEAREST_NEIGHBOR);
+			g2.setRenderingHint(RenderingHints.KEY_RENDERING, RenderingHints.VALUE_RENDER_SPEED);
+		}
+		else {
+			g2.setRenderingHint(RenderingHints.KEY_INTERPOLATION, RenderingHints.VALUE_INTERPOLATION_BILINEAR);
+			g2.setRenderingHint(RenderingHints.KEY_RENDERING, RenderingHints.VALUE_RENDER_QUALITY);
+		}
 
 		int w = getWidth();
 		int h = getHeight();
 
-		g2.setColor(BG);
+		g2.setColor(bg());
 		g2.fillRoundRect(0, 0, w, h, ARC, ARC);
 
-		g2.setColor(BORDER_COLOR);
-		g2.setStroke(new BasicStroke(1f));
-		g2.drawRoundRect(0, 0, w - 1, h - 1, ARC, ARC);
-
 		g2.setFont(new Font("SansSerif", Font.PLAIN, 11));
-		g2.setColor(TITLE_COLOR);
+		g2.setColor(titleColor());
 		FontMetrics fm = g2.getFontMetrics();
 		g2.drawString(title, 10, fm.getAscent() + 5);
 
@@ -336,9 +390,21 @@ public class ImagePreviewPanel extends JPanel {
 
 		if (image == null) {
 			drawPlaceholder(g2, contentX, contentY, contentW, contentH);
-		} else {
+		}
+		else {
 			drawContent(g2, contentX, contentY, contentW, contentH);
 		}
+
+		// Перекрываем углы маской: закрашиваем область за пределами скруглённого прямоугольника
+		// цветом родительского фона, чтобы картинка не "торчала" из скруглённых углов панели.
+		Area cornerMask = new Area(new Rectangle(0, 0, w, h));
+		cornerMask.subtract(new Area(new RoundRectangle2D.Float(0, 0, w, h, ARC, ARC)));
+		g2.setColor(getParent() != null ? getParent().getBackground() : bg());
+		g2.fill(cornerMask);
+
+		g2.setColor(borderColor());
+		g2.setStroke(new BasicStroke(1f));
+		g2.drawRoundRect(0, 0, w - 1, h - 1, ARC, ARC);
 
 		g2.dispose();
 	}
@@ -349,9 +415,6 @@ public class ImagePreviewPanel extends JPanel {
 		int gridY = grid[1];
 		int gridW = grid[2];
 		int gridH = grid[3];
-
-		// Клип строго по сетке: картинка и фон не выходят за её границы
-		g2.setClip(gridX, gridY, gridW, gridH);
 
 		if (draggable || showGridBackground) {
 			g2.setColor(gridBackgroundColor);
@@ -369,8 +432,27 @@ public class ImagePreviewPanel extends JPanel {
 		int drawX = gridCenterX - imgW / 2 + (int) Math.round(imgOffsetX);
 		int drawY = gridCenterY - imgH / 2 + (int) Math.round(imgOffsetY);
 
-		g2.drawImage(image, drawX, drawY, imgW, imgH, null);
-		g2.setClip(null);
+		// Вычисляем пересечение прямоугольника картинки с сеткой.
+		// Передаём в drawImage только видимую часть через координаты источника,
+		// чтобы BILINEAR-интерполяция не смешивала пиксели с "пустотой" за краем.
+		int visX1 = Math.max(drawX, gridX);
+		int visY1 = Math.max(drawY, gridY);
+		int visX2 = Math.min(drawX + imgW, gridX + gridW);
+		int visY2 = Math.min(drawY + imgH, gridY + gridH);
+
+		if (visX1 < visX2 && visY1 < visY2) {
+			BufferedImage source = resolveDisplayImage();
+			double srcScaleX = (double) source.getWidth() / imgW;
+			double srcScaleY = (double) source.getHeight() / imgH;
+
+			int sx1 = (int) Math.round((visX1 - drawX) * srcScaleX);
+			int sy1 = (int) Math.round((visY1 - drawY) * srcScaleY);
+			int sx2 = (int) Math.round((visX2 - drawX) * srcScaleX);
+			int sy2 = (int) Math.round((visY2 - drawY) * srcScaleY);
+
+			g2.drawImage(source, visX1, visY1, visX2, visY2, sx1, sy1, sx2, sy2, null);
+		}
+
 
 		if (showGrid) {
 			g2.setClip(gridX, gridY, gridW, gridH);
@@ -379,12 +461,92 @@ public class ImagePreviewPanel extends JPanel {
 		}
 	}
 
+	/**
+	 * Возвращает изображение для отрисовки: с Gaussian blur если blurRadius > 0,
+	 * иначе оригинал. Результат кэшируется и инвалидируется при смене image или blurRadius.
+	 */
+	private BufferedImage resolveDisplayImage() {
+		if (blurRadius <= 0.0) {
+			return image;
+		}
+
+		if (blurredImage != null) {
+			return blurredImage;
+		}
+
+		blurredImage = applyGaussianBlur(image, blurRadius);
+
+		return blurredImage;
+	}
+
+	/**
+	 * Gaussian blur с корректной обработкой краёв через reflect-padding:
+	 * изображение расширяется на intRadius пикселей с каждой стороны,
+	 * блюрится целиком, затем центральная часть вырезается обратно.
+	 * Это устраняет артефакт EDGE_NO_OP, при котором края остаются нечёткими.
+	 */
+	private static BufferedImage applyGaussianBlur(BufferedImage source, double radius) {
+		int intRadius = (int) Math.ceil(radius);
+		int size = intRadius * 2 + 1;
+		float[] data = buildGaussianKernel(size, intRadius, radius);
+		Kernel kernel = new Kernel(size, size, data);
+		ConvolveOp op = new ConvolveOp(kernel, ConvolveOp.EDGE_NO_OP, null);
+
+		int srcW = source.getWidth();
+		int srcH = source.getHeight();
+		int padW = srcW + intRadius * 2;
+		int padH = srcH + intRadius * 2;
+
+		BufferedImage padded = new BufferedImage(padW, padH, BufferedImage.TYPE_INT_RGB);
+		Graphics2D pg = padded.createGraphics();
+		pg.drawImage(source, intRadius, intRadius, null);
+
+		// Заполняем края зеркальным отражением крайних пикселей
+		pg.drawImage(source, intRadius, 0, intRadius + srcW, intRadius, 0, 0, srcW, 1, null);
+		pg.drawImage(source, intRadius, intRadius + srcH, intRadius + srcW, padH, 0, srcH - 1, srcW, srcH, null);
+		pg.drawImage(source, 0, intRadius, intRadius, intRadius + srcH, 0, 0, 1, srcH, null);
+		pg.drawImage(source, intRadius + srcW, intRadius, padW, intRadius + srcH, srcW - 1, 0, srcW, srcH, null);
+		pg.dispose();
+
+		BufferedImage blurred = new BufferedImage(padW, padH, BufferedImage.TYPE_INT_RGB);
+		op.filter(padded, blurred);
+
+		return blurred.getSubimage(intRadius, intRadius, srcW, srcH);
+	}
+
+	private static float[] buildGaussianKernel(int size, int intRadius, double radius) {
+		float[] kernel = new float[size * size];
+		double sigma = Math.max(radius / 2.0, 0.3);
+		double twoSigmaSq = 2.0 * sigma * sigma;
+		float sum = 0;
+
+		for (int y = 0; y < size; y++) {
+			for (int x = 0; x < size; x++) {
+				int dx = x - intRadius;
+				int dy = y - intRadius;
+				float value = (float) Math.exp(-(dx * dx + dy * dy) / twoSigmaSq);
+				kernel[y * size + x] = value;
+				sum += value;
+			}
+		}
+
+		for (int i = 0; i < kernel.length; i++) {
+			kernel[i] /= sum;
+		}
+
+		return kernel;
+	}
+
 	private void drawPlaceholder(Graphics2D g2, int x, int y, int w, int h) {
-		g2.setColor(PLACEHOLDER_COLOR);
+		g2.setColor(placeholderBg());
 		g2.fillRoundRect(x, y, w, h, 6, 6);
 
+		if (!draggable) {
+			return;
+		}
+
 		g2.setFont(new Font("SansSerif", Font.PLAIN, 13));
-		g2.setColor(PLACEHOLDER_TEXT_COLOR);
+		g2.setColor(placeholderText());
 		FontMetrics fm = g2.getFontMetrics();
 		int textX = x + (w - fm.stringWidth(PLACEHOLDER_TEXT)) / 2;
 		int textY = y + h / 2 + fm.getAscent() / 2;
@@ -419,7 +581,9 @@ public class ImagePreviewPanel extends JPanel {
 		g2.setPaintMode();
 	}
 
-	/** Вычисляет фиксированные координаты сетки (fit-scale без imgScale). */
+	/**
+	 * Вычисляет фиксированные координаты сетки (fit-scale без imgScale).
+	 */
 	private int[] computeGridBounds(int x, int y, int w, int h) {
 		double fitScaleX = (double) w / mapsX;
 		double fitScaleY = (double) h / mapsY;
@@ -433,7 +597,9 @@ public class ImagePreviewPanel extends JPanel {
 		return new int[]{gridX, gridY, gridW, gridH};
 	}
 
-	/** Вычисляет координаты сетки по текущим размерам панели. */
+	/**
+	 * Вычисляет координаты сетки по текущим размерам панели.
+	 */
 	private int[] computeGridBounds() {
 		int contentW = getWidth() - 8;
 		int contentH = getHeight() - TITLE_HEIGHT - 4;
@@ -455,10 +621,10 @@ public class ImagePreviewPanel extends JPanel {
 		double centerY = gridCenterY + imgOffsetY;
 
 		return new double[]{
-			centerX - imgW / 2,
-			centerY - imgH / 2,
-			centerX + imgW / 2,
-			centerY + imgH / 2
+				centerX - imgW / 2,
+				centerY - imgH / 2,
+				centerX + imgW / 2,
+				centerY + imgH / 2
 		};
 	}
 
@@ -523,7 +689,7 @@ public class ImagePreviewPanel extends JPanel {
 			public void mousePressed(MouseEvent e) {
 				requestFocusInWindow();
 
-				if (draggable == false || image == null) {
+				if (!draggable || image == null) {
 					return;
 				}
 
@@ -548,13 +714,17 @@ public class ImagePreviewPanel extends JPanel {
 
 			@Override
 			public void mouseReleased(MouseEvent e) {
+				if (!draggable) {
+					return;
+				}
+
 				resizing = false;
 				updateCursor(e.getX(), e.getY());
 			}
 
 			@Override
 			public void mouseMoved(MouseEvent e) {
-				if (draggable == false || image == null) {
+				if (!draggable || image == null) {
 					return;
 				}
 
@@ -563,20 +733,21 @@ public class ImagePreviewPanel extends JPanel {
 
 			@Override
 			public void mouseDragged(MouseEvent e) {
-				if (draggable == false || image == null) {
+				if (!draggable || image == null) {
 					return;
 				}
 
 				if (resizing) {
 					handleResize(e);
-				} else {
+				}
+				else {
 					handleDrag(e);
 				}
 			}
 		};
 
 		MouseWheelListener wheelListener = e -> {
-			if (draggable == false || image == null) {
+			if (!draggable || image == null) {
 				return;
 			}
 
@@ -602,28 +773,83 @@ public class ImagePreviewPanel extends JPanel {
 		bindArrow(condition, KeyEvent.VK_DOWN, true, 0, ARROW_STEP_FAST);
 	}
 
+	private void setupResizeListener() {
+		addComponentListener(new ComponentAdapter() {
+			@Override
+			public void componentResized(ComponentEvent e) {
+				rescaleOnPanelResize();
+			}
+		});
+	}
+
+	/**
+	 * Пересчитывает imgScaleX/Y и imgOffsetX/Y при изменении размера панели.
+	 * Для не-интерактивных панелей (resultPreview) — пересчитывает stretch-масштаб заново,
+	 * чтобы картинка всегда точно заполняла сетку без накопления ошибки.
+	 * Для интерактивных — сохраняет нормализованное положение через ratio сетки.
+	 */
+	private void rescaleOnPanelResize() {
+		if (image == null) {
+			return;
+		}
+
+		if (!draggable) {
+			resetDisplayOffsetStretch();
+			return;
+		}
+
+		int[] grid = computeGridBounds();
+		int newGridW = grid[2];
+		int newGridH = grid[3];
+
+		if (newGridW == 0 || newGridH == 0 || lastGridW == 0 || lastGridH == 0) {
+			lastGridW = newGridW;
+			lastGridH = newGridH;
+			return;
+		}
+
+		if (newGridW == lastGridW && newGridH == lastGridH) {
+			return;
+		}
+
+		double ratioX = (double) newGridW / lastGridW;
+		double ratioY = (double) newGridH / lastGridH;
+
+		imgScaleX *= ratioX;
+		imgScaleY *= ratioY;
+		imgOffsetX *= ratioX;
+		imgOffsetY *= ratioY;
+
+		lastGridW = newGridW;
+		lastGridH = newGridH;
+
+		repaint();
+	}
+
 	private void bindArrow(int condition, int keyCode, boolean shift, int dx, int dy) {
 		int modifiers = shift ? KeyEvent.SHIFT_DOWN_MASK : 0;
 		String key = (shift ? "shift-" : "") + keyCode + "-" + dx + "-" + dy;
 
 		getInputMap(condition).put(KeyStroke.getKeyStroke(keyCode, modifiers), key);
-		getActionMap().put(key, new AbstractAction() {
-			@Override
-			public void actionPerformed(ActionEvent e) {
-				if (draggable == false || image == null) {
-					return;
+		getActionMap().put(
+				key, new AbstractAction() {
+					@Override
+					public void actionPerformed(ActionEvent e) {
+						if (draggable == false || image == null) {
+							return;
+						}
+
+						imgOffsetX += dx;
+						imgOffsetY += dy;
+
+						repaint();
+
+						if (onOffsetChanged != null) {
+							onOffsetChanged.accept((int) Math.round(imgOffsetX), (int) Math.round(imgOffsetY));
+						}
+					}
 				}
-
-				imgOffsetX += dx;
-				imgOffsetY += dy;
-
-				repaint();
-
-				if (onOffsetChanged != null) {
-					onOffsetChanged.accept((int) Math.round(imgOffsetX), (int) Math.round(imgOffsetY));
-				}
-			}
-		});
+		);
 	}
 
 	private void updateCursor(int mx, int my) {
@@ -631,7 +857,8 @@ public class ImagePreviewPanel extends JPanel {
 
 		if (cursorType != -1) {
 			setCursor(Cursor.getPredefinedCursor(cursorType));
-		} else {
+		}
+		else {
 			setCursor(Cursor.getPredefinedCursor(Cursor.MOVE_CURSOR));
 		}
 	}
@@ -640,10 +867,51 @@ public class ImagePreviewPanel extends JPanel {
 		imgOffsetX = dragStartOffsetX + (e.getX() - dragStartMouseX);
 		imgOffsetY = dragStartOffsetY + (e.getY() - dragStartMouseY);
 
+		if (snapEnabled) {
+			applyEdgeSnap();
+		}
+
 		repaint();
 
 		if (onOffsetChanged != null) {
 			onOffsetChanged.accept((int) Math.round(imgOffsetX), (int) Math.round(imgOffsetY));
+		}
+	}
+
+	/**
+	 * Притягивает картинку к краям сетки, если любой её край находится в пределах
+	 * {@code SNAP_THRESHOLD} пикселей от соответствующего края сетки.
+	 * Snap применяется независимо по X и Y.
+	 */
+	private void applyEdgeSnap() {
+		int[] grid = computeGridBounds();
+		double gridLeft = grid[0];
+		double gridTop = grid[1];
+		double gridRight = grid[0] + grid[2];
+		double gridBottom = grid[1] + grid[3];
+
+		double imgW = image.getWidth() * imgScaleX;
+		double imgH = image.getHeight() * imgScaleY;
+		double gridCenterX = gridLeft + grid[2] / 2.0;
+		double gridCenterY = gridTop + grid[3] / 2.0;
+
+		double imgLeft = gridCenterX + imgOffsetX - imgW / 2;
+		double imgRight = gridCenterX + imgOffsetX + imgW / 2;
+		double imgTop = gridCenterY + imgOffsetY - imgH / 2;
+		double imgBottom = gridCenterY + imgOffsetY + imgH / 2;
+
+		if (Math.abs(imgLeft - gridLeft) < SNAP_THRESHOLD) {
+			imgOffsetX = gridLeft - gridCenterX + imgW / 2;
+		}
+		else if (Math.abs(imgRight - gridRight) < SNAP_THRESHOLD) {
+			imgOffsetX = gridRight - gridCenterX - imgW / 2;
+		}
+
+		if (Math.abs(imgTop - gridTop) < SNAP_THRESHOLD) {
+			imgOffsetY = gridTop - gridCenterY + imgH / 2;
+		}
+		else if (Math.abs(imgBottom - gridBottom) < SNAP_THRESHOLD) {
+			imgOffsetY = gridBottom - gridCenterY - imgH / 2;
 		}
 	}
 
@@ -671,11 +939,25 @@ public class ImagePreviewPanel extends JPanel {
 			case Cursor.W_RESIZE_CURSOR -> newLeft = mx;
 			case Cursor.S_RESIZE_CURSOR -> newBottom = my;
 			case Cursor.N_RESIZE_CURSOR -> newTop = my;
-			case Cursor.SE_RESIZE_CURSOR -> { newRight = mx; newBottom = my; }
-			case Cursor.SW_RESIZE_CURSOR -> { newLeft = mx; newBottom = my; }
-			case Cursor.NE_RESIZE_CURSOR -> { newRight = mx; newTop = my; }
-			case Cursor.NW_RESIZE_CURSOR -> { newLeft = mx; newTop = my; }
-			default -> { return; }
+			case Cursor.SE_RESIZE_CURSOR -> {
+				newRight = mx;
+				newBottom = my;
+			}
+			case Cursor.SW_RESIZE_CURSOR -> {
+				newLeft = mx;
+				newBottom = my;
+			}
+			case Cursor.NE_RESIZE_CURSOR -> {
+				newRight = mx;
+				newTop = my;
+			}
+			case Cursor.NW_RESIZE_CURSOR -> {
+				newLeft = mx;
+				newTop = my;
+			}
+			default -> {
+				return;
+			}
 		}
 
 		double newW = newRight - newLeft;
@@ -685,8 +967,8 @@ public class ImagePreviewPanel extends JPanel {
 			return;
 		}
 
-		double newScaleX = Math.max(SCALE_MIN, Math.min(SCALE_MAX, newW / image.getWidth()));
-		double newScaleY = Math.max(SCALE_MIN, Math.min(SCALE_MAX, newH / image.getHeight()));
+		double newScaleX = Math.clamp(newW / image.getWidth(), SCALE_MIN, SCALE_MAX);
+		double newScaleY = Math.clamp(newH / image.getHeight(), SCALE_MIN, SCALE_MAX);
 
 		if (e.isShiftDown() || e.isControlDown()) {
 			// Пропорциональный resize: выбираем ведущую ось по наибольшему изменению
@@ -694,7 +976,7 @@ public class ImagePreviewPanel extends JPanel {
 			double deltaH = Math.abs(newH - (resizeStartBottom - resizeStartTop));
 			double uniformScale = deltaW >= deltaH ? newScaleX : newScaleY;
 
-			uniformScale = Math.max(SCALE_MIN, Math.min(SCALE_MAX, uniformScale));
+			uniformScale = Math.clamp(uniformScale, SCALE_MIN, SCALE_MAX);
 
 			// Пересчитываем границы с сохранением пропорций, фиксируя противоположную сторону
 			double scaledW = image.getWidth() * uniformScale;
@@ -711,7 +993,8 @@ public class ImagePreviewPanel extends JPanel {
 				}
 				case Cursor.S_RESIZE_CURSOR -> newRight = newLeft + scaledW;
 				case Cursor.N_RESIZE_CURSOR -> newRight = newLeft + scaledW;
-				default -> { }
+				default -> {
+				}
 			}
 
 			newScaleX = uniformScale;
@@ -737,7 +1020,7 @@ public class ImagePreviewPanel extends JPanel {
 		double oldScaleX = imgScaleX;
 		double oldScaleY = imgScaleY;
 
-		double newScale = Math.max(SCALE_MIN, Math.min(SCALE_MAX, imgScaleX * (1.0 + delta)));
+		double newScale = Math.clamp(imgScaleX * (1.0 + delta), SCALE_MIN, SCALE_MAX);
 		imgScaleX = newScale;
 		imgScaleY = newScale;
 
